--- a/c3_index.html
+++ b/c3_index.html
@@ -10,7 +10,7 @@
 <body>
 	<header>
 		<img src="images/town_hall_logo.gif" alt="San Joaquin Valley
-		Town Hall" height="80"
+		Town Hall" height="80">
 		San Joaquin Valley Town Hall
 		Celebrating our 75th Year		
 	</header>
