--- a/c3_index.html
+++ b/c3_index.html
@@ -11,8 +11,9 @@
 	<header>
 		<img src="images/town_hall_logo.gif" alt="San Joaquin Valley
 		Town Hall" height="80">
-		San Joaquin Valley Town Hall
-		Celebrating our 75th Year		
+		<br>
+		<h2>San Joaquin Valley Town Hall</h2>
+		<h3>Celebrating our 75th Year</h3>		
 	</header>
 	<main>
 		
