--- a/c3_index.html
+++ b/c3_index.html
@@ -9,8 +9,8 @@
 
 <body>
 	<header>
-		<img src="images/town_hall_logo.gif" alt="San Joaquin Valley
-		Town Hall" height="80">
+		<img src="images/town_hall_logo.gif" alt="San Joaquin Valley Town Hall" 
+		height="80">
 		<br>
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our 75th Year</h3>		
@@ -24,26 +24,31 @@
 		
 		As one or our members told us:
 
-		Each year I give a ticket package to each of our family members. 
+		<blockquote>year I give a ticket package to each of our family members.</blockquote>
 		
 		I think of it as the gift of knowledge...and that is priceless.</p>
 
 		<h2>Our Ticket Packages</h2>
-
-		Season Package: $95
-		Patron Package: $200
-		Single Speaker: $25
-
+			<ul>
+				<li>Season Package: $95</li>
+				<li>Patron Package: $200</li>
+				<li>Single Speaker: $25</li>
+			</ul>
 		<h1>This season's guest speakers</h1>
 
-		October
-		David Brancaccio
+		<h3>October</h3>
 
-		November
-		Andrew Ross Sorkin
-
-		January
-		Amy Chua
+		<br>
+		<a href="speakers/brancaccio.html">David Brancaccio</a>
+		<img src="images/brancaccio75.jpg"alt="Brancaccio" height="75">
+		<h3>November</h3>
+		<br>
+		<a href="speakers/Sorkin.html">Andrew Ross Sorkin</a>
+		<img src="images/sorkin75.jpg" alt="Sorkin" height="75">
+		<h3>January</h3>
+		<br>
+		<a href="speakers/Chua.html">Amy Chua</a>
+		<img src="images/chua75.jpg" alt="Chua" height="75">
 	</main>
 	<footer>
 		(c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755		
