--- a/c3_index.html
+++ b/c3_index.html
@@ -24,7 +24,8 @@
 		
 		As one or our members told us:
 
-		<blockquote>year I give a ticket package to each of our family members.</blockquote>
+		<blockquote>Each year I give a ticket package to each of our family members. 
+			I think of it as the gift of knowledge...and that is priceless.</blockquote>
 		
 		I think of it as the gift of knowledge...and that is priceless.</p>
 
