--- a/c3_index.html
+++ b/c3_index.html
@@ -20,7 +20,9 @@
 
 		<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. 
 			
-		Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! 
+		Our mission is to bring nationally and internationally renowned, 
+		thought-provoking speakers who inform, educate, 
+		and entertain our audience! 
 		
 		As one or our members told us:
 
