--- a/c3_index.html
+++ b/c3_index.html
@@ -13,7 +13,7 @@
 		height="80">
 		<br>
 		<h2>San Joaquin Valley Town Hall</h2>
-		<h3>Celebrating our 75th Year</h3>		
+		<h3>Celebrating our 75<th>th</th> Year</h3>		
 	</header>
 	<main>
 		<h2>Our Mission</h2>
@@ -55,7 +55,7 @@
 		<img src="images/chua75.jpg" alt="Chua" height="75">
 	</main>
 	<footer>
-		(c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755		
+		<p> &copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>		
 	</footer>
 </body>
 </html>
